Tue Jul 28 15:42:39 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/drawable_cmds.c (drawable_fill_invoker): 
	* libgimp/gimpenums.h: Changed the libgimp GFillType
	enums to match the core enums in value, the names still
	differ. 
	
	* plug-ins/script-fu/script-fu.c: changed the fill setvars to use
	the GFillType enums. 
	
Tue Jul 28 14:03:57 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/Makefile.am
	* app/errors.c
	* app/errorconsole.[ch]
	* app/app_procs.c
	* app/appenv.h
	* app/menus.c: error console implementation from Nuke
	<nuke@bayside.net> Hooks to g_message

	* app/fileops.c: honor message_handler while still setting
	filesel widget sensitivity properly

Tue Jul 28 15:04:39 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/gimpdrawable.h: reordered the GimpFillType enum,
	unfortunately this will cause a lot of recompilation for the
	rest of you.

Tue Jul 28 14:14:43 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/drawable.c (drawable_fill): added a case for
	FOREGROUND_FILL.  Fixes the layer new dialog so that it actually
	works with foreground fill selected. 

1998-07-28  Tuomas Kuosmanen  <tigert@gimp.org>

	* app/file_new_dialog.c
	* app/layers_dialog.c: change the order of the different 
	fill-types (Foreground and Background are nicer to sit besides
	each other)

Tue Jul 28 19:46:53 BST 1998  Adam D. Moss <adam@gimp.org>

	* plug-ins/gee/gee.c
	* plug-ins/animationplay/animationplay.c: Fixes for
	gdkrgb output on pseudocolour displays.

Mon Jul 27 12:27:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/fp/fp.c: make PDB entry for filter pack saner

Mon Jul 27 14:29:39 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/xcf.c (xcf_load_level): Made xcf loader a little less
	zealous in trying to copy-on-write duplicated tiles.

Sun Jul 26 23:47:33 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/blend.c
	* app/crop.c
	* app/edit_selection.c
	* app/rect_select.c: More statusbar stuff (should be finished now,
	but who knows...)
	